fixed comments and spacing issues

--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -25,7 +25,7 @@
     position: relative;
     float: right;
     right: 0px;
-    bottom: -35px;
+    bottom: -25px;
 }
 
 
@@ -35,12 +35,5 @@
         height: 75vh;
         overflow-y: scroll;
     }
-
-    // .nextBtn {
-    //     position: relative;
-    //     float: right;
-    //     right: 0px;
-    //     bottom: -35px;
-    // }
 }
 
