--- a/src/index.scss
+++ b/src/index.scss
@@ -134,7 +134,7 @@ h3 {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  z-index: 100;
+  z-index: 5;
   padding: 50px;
   width: 725px;
 }
